--- a/Exercises/Sorting/BubsortSumm.html
+++ b/Exercises/Sorting/BubsortSumm.html
@@ -4,12 +4,13 @@
   <title>Bubble Sort: Multiple Choice Summary</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script data-main="../../ODSAkhan-exercises/local-only/main.js" src="../../ODSAkhan-exercises/local-only/require.js"></script>
 </head>
 
 <body data-height="650" data-width="950">
   <div class="exercise" data-name="BubsortMCQcomplex"></div>
   <div class="exercise" data-name="BubsortMCQcomps"></div>
+<!-- 
   <div class="exercise" data-name="BubsortMCQcost"></div>
   <div class="exercise" data-name="BubsortMCQequal"></div>
   <div class="exercise" data-name="BubsortMCQrevsort"></div>
@@ -17,5 +18,6 @@
   <div class="exercise" data-name="BubsortTFstable"></div>
   <div class="exercise" data-name="BubsortMCQwhen"></div>
   <div class="exercise" data-name="BubsortMCQworst"></div>
+ -->
 </body>
 </html>
